validate cert and key

--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port=8443
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=springboot
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=mykey
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=springboot
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=mykey
+server.ssl.certificate-private-key: classpath:keypair/key.pem
+server.ssl.certificate: classpath:keypair/cert.crt
 
 server.http.port=-1
 
@@ -14,3 +16,5 @@ server.ssl.protocol=TLSv1.2
 
 logging.level.org.springframework.security=TRACE
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
