--- a/spring-security/build.gradle
+++ b/spring-security/build.gradle
@@ -37,6 +37,10 @@ dependencies {
   	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	// For certificate validation
+	implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
