--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -3,8 +3,18 @@ server.port=8443
 #server.ssl.key-store-password=springboot
 #server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias=mykey
-server.ssl.certificate-private-key: classpath:keypair/key.pem
-server.ssl.certificate: classpath:keypair/cert.crt
+
+#server.ssl.certificate-private-key: classpath:keypair/key.pem
+#server.ssl.certificate: classpath:keypair/cert.crt
+
+server.ssl.certificate-private-key: classpath:myCA/intermediateCA/private/www.example.com.key.pem
+server.ssl.certificate: classpath:myCA/intermediateCA/certs/chain.cert.pem
+
+#server.ssl.key-store=classpath:certs/entity-key.pem
+#server.ssl.key-store-password=springboot
+#server.ssl.key-store-type=PKCS12
+#server.ssl.trust-store=classpath:certs/root-cert.pem
+#server.ssl.trust-store-password=springboot
 
 server.http.port=-1
 
